--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,3 @@
 cmake_minimum_required(VERSION 3.0)
 project(networking_app)
-add_executable(networkapp.cxx)
+add_executable(networkapp, networkapp.cxx)
